DataTables preview cells now truncated to 1000 characters, with a "more" link which shows the full cell contents in a modal window when required. Fixes #785. Fixes #825. May help with #745.

--- a/web/media/css/code_overview.css
+++ b/web/media/css/code_overview.css
@@ -1589,7 +1589,13 @@ div.user_comment small {
 }
 
 
-
+#moar {
+	font-size: 12px;
+	line-height: 18px;
+	font-family: Courier, monospace;
+	text-align: left;
+	padding: 20px;
+}
 
 
 
